# freesound-credits

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .vale.ini  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  READEME.md  README.md  README.org  TODO.md  TODO.org  cliff.toml  default-template.toml  deny.toml  dist-workspace.toml  prettier.json  release-plz.toml  spellcheck.dic  spellcheck.toml
.github/: CONTRIBUTING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: add_a_new_daw.yml  bug_report.yml  config.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/styles/config/vocabularies/Crabs/: accept.txt
.github/workflows/: audit.yml  build_and_release.yml  cargo-assist.yml  cargo-deny.yml  cargo_audit.yml  ci.yml  cleanowners.yml  comment-filter.yml  commitlint.yml  markdownlint-cli2.yml  release-plz.yml  release.yml  trufflehog.yml
.scripts/ci/: pack-cli.sh
docs/: CODEOWNERS  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.org  CONTRIBUTING.md  CONTRIBUTING.org  RATIONALE.md  RATIONALE.org
src/: cli.rs  error.rs  lib.rs  main.rs
