[package]
name = "freesound-credits"
version = "0.2.24"
edition = "2021"
license = "Apache-2.0"

authors = ["Andrea C From The App"]
homepage = "https://andreacfromtheapp.github.io/apps/freesound-credits"
repository = "https://github.com/andreacfromtheapp/freesound-credits"
documentation = "https://docs.rs/freesound-credits"
description = "A simple command line utility to credit Freesound samples in a usable markdown file"
readme = "README.md"
keywords = ["freesound", "creative-commons", "credits"]
categories = ["command-line-utilities"]
exclude = ["/.github/", "docs"]

[[bin]]
name = "freesound-credits"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }

# Config for 'cargo dist'
[profile.release]
lto = true
strip = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.25.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-pc-windows-msvc", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "skip"
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".zip"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".zip"
# A GitHub repo to push Homebrew formulas to
tap = "andreacfromtheapp/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Customize the Homebrew formula name
formula = "freesound-credits"
