[package]
name = "freesound-credits"
version = "0.2.29"
edition = "2024"
resolver = "3"
license = "Apache-2.0"

authors = ["Andrea C From The App"]
homepage = "https://andreacfromtheapp.github.io/apps/freesound-credits"
repository = "https://github.com/andreacfromtheapp/freesound-credits"
documentation = "https://docs.rs/freesound-credits"
description = "A simple command line utility to credit Freesound samples in a usable markdown file"
readme = "README.md"
keywords = ["freesound", "creative-commons", "credits"]
categories = ["command-line-utilities"]
exclude = ["/.github/", "docs"]

[[bin]]
name = "freesound-credits"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }

# Config for 'cargo dist'
[profile.release]
lto = true
strip = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"
